--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,3 +14,5 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 bind-key -r f run-shell "tmux neww ~/.scripts/tmux-sessionizer"
+
+set -g status-style 'bg=#1e1e1e fg=#9d7cd8'
