--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,4 +15,4 @@ bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection c
 
 bind-key -r f run-shell "tmux neww ~/.scripts/tmux-sessionizer"
 
-set -g status-style 'bg=#1e1e1e fg=#9d7cd8'
+set -g status-style 'bg=#000000 fg=#9d7cd8'
