--- a/i3/i3/config
+++ b/i3/i3/config
@@ -92,7 +92,7 @@ bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
+bindsym $mod+Shift+t floating toggle
 
 # focus the parent container
 bindsym $mod+a focus parent
