--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,6 @@
-set -ga terminal-overrides ",xterm-256color*:Tc"
-set-option -g default-terminal "xterm-256color"
+set -g default-terminal "${TERM}"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 set -s escape-time 0
 
 unbind C-b
@@ -9,10 +10,28 @@ bind-key C-a send-prefix
 bind r source-file ~/.tmux.conf
 set -g base-index 1
 
-set-window-option -g mode-keys vi
-bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
-
 bind-key -r f run-shell "tmux neww ~/.scripts/tmux-sessionizer"
 
-set -g status-style 'bg=#000000 fg=#9d7cd8'
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g @plugin 'o0th/tmux-nova'
+    set -g @nova-nerdfonts true
+    set -g @nova-nerdfonts-left 
+    set -g @nova-nerdfonts-right 
+
+    set -g @nova-segment-mode "#{?client_prefix,Ω,ω}"
+    set -g @nova-segment-mode-colors "#50fa7b #282a36"
+
+    set -g @nova-segment-whoami "#(whoami)@#h"
+    set -g @nova-segment-whoami-colors "#50fa7b #282a36"
+
+    set -g @nova-pane "#I#{?pane_in_mode,  #{pane_mode},}  #W"
+
+    set -g @nova-rows 0
+    set -g @nova-segments-0-left "mode"
+    set -g @nova-segments-0-right "whoami"
+
+run '~/.tmux/plugins/tpm/tpm'
