--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,6 +1,6 @@
-shell:
-  program: C:/Users/berin/.cargo/bin/nu.exe
-
+# shell:
+  # program: C:/Users/berin/.cargo/bin/nu.exe
+ 
 cursor:
   style:
     blinking: Always
@@ -8,14 +8,16 @@ cursor:
   blink_timeout: 0
 
 window:
-  decorations: full
+  startup_mode: SimpleFullscreen
+  decorations: none
   dynamic_title: true
   padding:
     x: 5
     y: 5
 
 live_config_reload: true
-working_directory: C:/Users/berin/
+# # working_directory: C:/Users/berin/
+# working_directory: ~/
 
 draw_bold_text_with_bright_colors: true
 colors:
@@ -39,3 +41,7 @@ colors:
     magenta: '#B4009E'
     cyan: '#61D6D6'
     white: '#F2F2F2'
+
+font:
+  family: 'Consolas Nerd Font'
+  size: 14
