--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,6 +10,8 @@ bind-key C-a send-prefix
 bind r source-file ~/.tmux.conf
 set -g base-index 1
 
+set-window-option -g mode-keys vi
+
 bind-key -r f run-shell "tmux neww ~/.scripts/tmux-sessionizer"
 
 
