--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,7 +20,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 set -g @plugin 'o0th/tmux-nova'
-    set -g @nova-nerdfonts false
+    set -g @nova-nerdfonts true
 
     set -g @nova-segment-mode "#{?client_prefix,Ω,ω}"
     set -g @nova-segment-mode-colors "#50fa7b #282a36"
