--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,9 @@
-set -g default-terminal "${TERM}"
+set -g default-terminal "alacritty"
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+set-option -ga terminal-features ",alacritty:usstyle"
+set-option -ga terminal-features ",alacritty:RGB"
+
 set -s escape-time 0
 
 unbind C-b
