fix alacritty; tmux pretty

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,21 +20,13 @@ bind-key -r f run-shell "tmux neww ~/.scripts/tmux-sessionizer"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'rose-pine/tmux'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-set -g @plugin 'o0th/tmux-nova'
-    set -g @nova-nerdfonts false
-
-    set -g @nova-segment-mode "#{?client_prefix,Ω,ω}"
-    set -g @nova-segment-mode-colors "#50fa7b #282a36"
-
-    set -g @nova-segment-whoami "%I:%M %p | %d %h %Y | #(whoami)"
-    set -g @nova-segment-whoami-colors "#50fa7b #282a36"
-
-    set -g @nova-pane "#I#{?pane_in_mode,  #{pane_mode},}  #W"
-
-    set -g @nova-rows 0
-    set -g @nova-segments-0-left "mode"
-    set -g @nova-segments-0-right "whoami"
+set -g @rose_pine_variant 'main'
+set -g @rose_pine_disable_active_window_menu 'on'
+set -g @rose_pine_user 'on'
+set -g @rose_pine_bar_bg_disable 'on'
+set -g @rose_pine_date_time '%d %h %Y %H:%m'
 
 run '~/.tmux/plugins/tpm/tpm'
