--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,12 +21,13 @@ bind-key -r f run-shell "tmux neww ~/.scripts/tmux-sessionizer"
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'rose-pine/tmux'
+set -g @rose_pine_variant 'main'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
-set -g @rose_pine_variant 'main'
 set -g @rose_pine_disable_active_window_menu 'on'
 set -g @rose_pine_user 'on'
+set -g @rose_pine_date_time '| %d %h %Y | %I:%M %p |'
 set -g @rose_pine_bar_bg_disable 'on'
-set -g @rose_pine_date_time '%d %h %Y %H:%m'
+set -g @rose_pine_bar_bg_disabled_color_option 'default'
 
 run '~/.tmux/plugins/tpm/tpm'
