--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -17,6 +17,7 @@ option_as_alt = 'OnlyLeft'
 [font]
 # normal = "UbuntuMono Nerd Font"
 normal = { family = "Consolas Nerd Font", style = "Regular" }
+bold = { family = "Consolas", style = "Bold" }
 size = 16
 offset = { x = 0, y = 0 }
 
