--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,6 +9,7 @@ set -s escape-time 0
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
+bind c new-window -c "#{pane_current_path}"
 
 bind r source-file ~/.tmux.conf
 set -g base-index 1
