--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,5 +1,5 @@
 live_config_reload = true
-shell.program = "/bin/zsh"
+shell.program = "zsh"
 
 [env]
 TERM = "alacritty"
@@ -15,10 +15,10 @@ option_as_alt = 'OnlyLeft'
 
 
 [font]
-# normal = "UbuntuMono Nerd Font"
+# normal = { family = "UbuntuMono Nerd Font" }
 normal = { family = "Consolas Nerd Font", style = "Regular" }
-bold = { family = "Consolas", style = "Bold" }
-size = 18
+# bold = { family = "Consolas", style = "Bold" }
+size = 14
 offset = { x = 0, y = 0 }
 
 [cursor]
