--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,6 +13,7 @@ bind c new-window -c "#{pane_current_path}"
 
 bind r source-file ~/.tmux.conf
 set -g base-index 1
+setw -g pane-base-index 1
 
 set-window-option -g mode-keys vi
 
