restyle tmux; restyle waybar; remove autorandr; remove background image; remove .ruff.toml;

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -68,8 +68,8 @@ env = HYPRCURSOR_SIZE,24
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general { 
-    gaps_in = 10
-    gaps_out = 20
+    gaps_in = 5
+    gaps_out = 10
 
     border_size = 0
 
@@ -96,7 +96,7 @@ decoration {
 
     drop_shadow = true
     shadow_range = 7
-    shadow_render_power = 3
+    shadow_render_power = 2
     col.shadow = rgba(1a1a1aee)
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
@@ -117,12 +117,12 @@ animations {
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = windows, 1, 2, myBezier
+    animation = windowsOut, 1, 2, default, popin 80%
+    animation = border, 1, 2, default
+    animation = borderangle, 1, 2, default
+    animation = fade, 1, 2, default
+    animation = workspaces, 1, 2, default
 }
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
@@ -138,7 +138,7 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc { 
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    force_default_wallpaper = 2 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
@@ -179,6 +179,7 @@ bind = SUPER, L, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod SHIFT, T, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
+bind = $mainMod, F, fullscreen
 
 # bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod SHIFT, J, togglesplit, # dwindle
