--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -17,19 +17,25 @@ setw -g pane-base-index 1
 
 set-window-option -g mode-keys vi
 
-bind-key -r f run-shell "tmux neww ~/.scripts/tmux-sessionizer"
+bind-key C-f run-shell "tmux neww ~/.scripts/tmux-sessionizer"
 
+# remove clock
+set -g status-right ''
+# transparent background, nice blue text
+set -g status-style 'bg=default fg=#b3e5ff'
+# session title styling
+set -g status-left '#S '
+# current window styline
+set -g window-status-current-style 'fg=#b3e5ff bg=#001F2E'
+# active window text format 
+set -g window-status-current-format " #I: #W "
+# inactive window text format
+set -g window-status-format ' #I: #W'
+# move status bar to top
+set -g status-position top
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'rose-pine/tmux'
-set -g @rose_pine_variant 'main'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-
-set -g @rose_pine_disable_active_window_menu 'on'
-set -g @rose_pine_user 'on'
-set -g @rose_pine_date_time '| %d %h %Y | %I:%M %p |'
-set -g @rose_pine_bar_bg_disable 'on'
-set -g @rose_pine_bar_bg_disabled_color_option 'default'
-
-run '~/.tmux/plugins/tpm/tpm'
+# add blank extra status line beneath 
+# to add some spacing
+set -Fg 'status-format[0]' '#{status-format[1]}'
+set -g 'status-format[1]' ''
+set -g status 2
