hyprland monitor lock

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -140,6 +140,8 @@ master {
 misc { 
     force_default_wallpaper = 2 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    enable_swallow = true
+    swallow_regex = "alacritty|Alacritty"
 }
 
 
@@ -175,11 +177,12 @@ $mainMod = ALT # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, Q, killactive,
-bind = SUPER, L, exit,
+bind = SUPER SHIFT, L, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod SHIFT, T, togglefloating,
 bind = $mainMod, SPACE, exec, $menu
 bind = $mainMod, F, fullscreen
+bind = $mainMod SHIFT, R, forcerendererreload
 
 # bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod SHIFT, J, togglesplit, # dwindle
@@ -248,4 +251,16 @@ bindm = $mainMod, mouse:273, resizewindow
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
+workspace = 1, monitor:DP-1, persistent:true, default=true
+workspace = 2, monitor:DP-1, persistent:true
+workspace = 3, monitor:DP-1, persistent:true
+workspace = 4, monitor:DP-1, persistent:true
+workspace = 5, monitor:DP-1, persistent:true
+workspace = 6, monitor:DP-1, persistent:true
+workspace = 7, monitor:DP-1, persistent:true
+workspace = 8, monitor:DP-1, persistent:true
+workspace = 9, monitor:DP-1, persistent:true
+workspace = 10, monitor:DP-2
+
+# start waybar
 exec-once=bash ~/.config/hypr/start.sh
