--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,6 +10,7 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 bind c new-window -c "#{pane_current_path}"
+bind-key r source ~/.dotfiles/tmux/.tmux.conf
 
 set -g base-index 1
 setw -g pane-base-index 1
@@ -18,23 +19,17 @@ set-window-option -g mode-keys vi
 
 bind -n C-f run-shell "tmux neww ~/.scripts/tmux-sessionizer"
 
-# # remove clock
-# set -g status-right ''
-# # transparent background, nice blue text
-# set -g status-style 'bg=default fg=#b3e5ff'
-# # session title styling
-# set -g status-left '#S '
-# # current window styline
-# set -g window-status-current-style 'fg=#b3e5ff bg=#001F2E'
-# # active window text format 
-# set -g window-status-current-format " #I: #W "
-# # inactive window text format
-# set -g window-status-format ' #I: #W'
-# # move status bar to top
-# set -g status-position top
-#
-# # add blank extra status line beneath 
-# # to add some spacing
-# set -Fg 'status-format[0]' '#{status-format[1]}'
-# set -g 'status-format[1]' ''
-# set -g status 2
+# remove clock
+set -g status-right ''
+# transparent background, nice blue text
+set -g status-style 'bg=default fg=#b3e5ff'
+# session title styling
+set -g status-left '#S '
+# current window styline
+set -g window-status-current-style 'fg=#b3e5ff bg=#001F2E'
+# active window text format 
+set -g window-status-current-format " #I: #W "
+# inactive window text format
+set -g window-status-format ' #I: #W'
+# move status bar to top
+set -g status-position top
