tmux status bar: re-add time

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -20,7 +20,7 @@ set-window-option -g mode-keys vi
 bind -n C-f run-shell "tmux neww ~/.scripts/tmux-sessionizer"
 
 # remove clock
-set -g status-right ''
+set -g status-right '%a, %d %b, %I:%M %p        '
 # transparent background, nice blue text
 set -g status-style 'bg=default fg=#b3e5ff'
 # session title styling
