convert to new keyboard layout

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -151,7 +151,7 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
+    kb_layout = true-prog-qwerty
     kb_variant =
     kb_model =
     kb_options =
@@ -175,14 +175,14 @@ input {
 $mainMod = ALT # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, RETURN, exec, $terminal
-bind = $mainMod, Q, killactive,
-bind = SUPER SHIFT, L, exit,
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod SHIFT, T, togglefloating,
-bind = $mainMod, SPACE, exec, $menu
-bind = $mainMod, F, fullscreen
-bind = $mainMod SHIFT, R, forcerendererreload
+bind = $mainMod      , RETURN, exec          , $terminal
+bind = $mainMod      , Q     , killactive    ,
+bind = SUPER SHIFT   , L     , exit          ,
+bind = $mainMod      , E     , exec          , $fileManager
+bind = $mainMod SHIFT, T     , togglefloating,
+bind = $mainMod      , SPACE , exec          , $menu
+bind = $mainMod      , F     , fullscreen
+bind = $mainMod SHIFT, R     , forcerendererreload
 
 # bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod SHIFT, J, togglesplit, # dwindle
@@ -211,6 +211,18 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
+# Allow it to work with altered keyboard layout
+bind = $mainMod, plus        , workspace, 1
+bind = $mainMod, bracketleft , workspace, 2
+bind = $mainMod, braceleft   , workspace, 3
+bind = $mainMod, parenleft   , workspace, 4
+bind = $mainMod, ampersand   , workspace, 5
+bind = $mainMod, equal       , workspace, 6
+bind = $mainMod, parenright  , workspace, 7
+bind = $mainMod, braceright  , workspace, 8
+bind = $mainMod, bracketright, workspace, 9
+bind = $mainMod, asterisk    , workspace, 10
+
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
 bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
@@ -223,13 +235,24 @@ bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
 bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
 bind = $mainMod SHIFT, 0, movetoworkspacesilent, 10
 
+bind = $mainMod SHIFT, plus        , movetoworkspacesilent, 1
+bind = $mainMod SHIFT, bracketleft , movetoworkspacesilent, 2
+bind = $mainMod SHIFT, braceleft   , movetoworkspacesilent, 3
+bind = $mainMod SHIFT, parenleft   , movetoworkspacesilent, 4
+bind = $mainMod SHIFT, ampersand   , movetoworkspacesilent, 5
+bind = $mainMod SHIFT, equal       , movetoworkspacesilent, 6
+bind = $mainMod SHIFT, parenright  , movetoworkspacesilent, 7
+bind = $mainMod SHIFT, braceright  , movetoworkspacesilent, 8
+bind = $mainMod SHIFT, bracketright, movetoworkspacesilent, 9
+bind = $mainMod SHIFT, asterisk    , movetoworkspacesilent, 10
+
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspacesilent, special:magic
+bind = $mainMod      , S, togglespecialworkspace, magic
+bind = $mainMod SHIFT, S, movetoworkspacesilent , special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+bind = $mainMod, mouse_up  , workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
@@ -251,15 +274,15 @@ bindm = $mainMod, mouse:273, resizewindow
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
-workspace = 1, monitor:DP-1, persistent:true, default=true
-workspace = 2, monitor:DP-1, persistent:true
-workspace = 3, monitor:DP-1, persistent:true
-workspace = 4, monitor:DP-1, persistent:true
-workspace = 5, monitor:DP-1, persistent:true
-workspace = 6, monitor:DP-1, persistent:true
-workspace = 7, monitor:DP-1, persistent:true
-workspace = 8, monitor:DP-1, persistent:true
-workspace = 9, monitor:DP-1, persistent:true
+workspace = 1 , monitor:DP-1, persistent:true, default=true
+workspace = 2 , monitor:DP-1, persistent:true
+workspace = 3 , monitor:DP-1, persistent:true
+workspace = 4 , monitor:DP-1, persistent:true
+workspace = 5 , monitor:DP-1, persistent:true
+workspace = 6 , monitor:DP-1, persistent:true
+workspace = 7 , monitor:DP-1, persistent:true
+workspace = 8 , monitor:DP-1, persistent:true
+workspace = 9 , monitor:DP-1, persistent:true
 workspace = 10, monitor:DP-2
 
 # start waybar
