--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,9 +28,9 @@ set -g status-left ' #S '
 # current window styline
 set -g window-status-current-style 'fg=#b3e5ff bg=#001F2E'
 # active window text format 
-set -g window-status-current-format " #I: #W "
+set -g window-status-current-format " #I: #W * "
 # inactive window text format
-set -g window-status-format '#[bg=#1B0029] #I: #W '
+set -g window-status-format '#[bg=#1B0029] #I: #W ~ '
 # remove gaps between window status
 set -g window-status-separator ''
 # move status bar to top
