--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,6 +14,7 @@ bind-key r source ~/.dotfiles/tmux/.tmux.conf
 
 set -g base-index 1
 setw -g pane-base-index 1
+set -g mouse on
 
 set-window-option -g mode-keys vi
 
