fix cursor -> adwaita <3

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -16,7 +16,6 @@
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
 
-
 ################
 ### MONITORS ###
 ################
@@ -165,6 +164,12 @@ input {
     touchpad {
         natural_scroll = false
     }
+}
+
+exec-once = hyprctl setcursor Adwaita 24
+cursor {
+    enable_hyprcursor = false
+    hide_on_key_press = true
 }
 
 ####################
